--- a/README.html
+++ b/README.html
@@ -365,7 +365,9 @@ pre code {
 <p><a href="https://www.healthaffairs.org/do/10.1377/forefront.20140404.038266/full/" class="uri">https://www.healthaffairs.org/do/10.1377/forefront.20140404.038266/full/</a></p>
 <p><a href="https://pubmed.ncbi.nlm.nih.gov/23993475/" class="uri">https://pubmed.ncbi.nlm.nih.gov/23993475/</a></p>
 <p><a href="https://www.healthinsurance.org/obamacare/how-obamacare-changed-maternity-coverage/" class="uri">https://www.healthinsurance.org/obamacare/how-obamacare-changed-maternity-coverage/</a></p>
-<p>I had been having trouble opening the files in R, but found a version of the data files in .csv <a href="http://data.nber.org/data/vital-statistics-natality-data.html" class="uri">http://data.nber.org/data/vital-statistics-natality-data.html</a> ; After downloading the .csv versions of the files, I was able to load the data in R through dat &lt;- read.csv(&quot;desktop/elizaepstein/natl2013.csv)</p>
+<p>I had been having trouble opening the files in R, but found a version of the data files in .csv</p>
+<p><a href="http://data.nber.org/data/vital-statistics-natality-data.html" class="uri">http://data.nber.org/data/vital-statistics-natality-data.html</a></p>
+<p>After downloading the .csv versions of the files, I was able to load the data in R through dat &lt;- read.csv(&quot;desktop/elizaepstein/natl2013.csv)</p>
 </div>
 </div>
 <div id="thesis-proposal" class="section level1">
@@ -379,20 +381,18 @@ pre code {
 <h2>Table of Contents:</h2>
 <p>I. Introduction</p>
 <ol start="2" style="list-style-type: upper-roman">
-<li>Literature Review</li>
-</ol>
+<li><p>Literature Review</p>
 <p>● Prenatal Incarceration</p>
 <p>● Pregnancy Outcomes in Prisons in the US</p>
 <p>● Prenatal Care in Prisons</p>
-<p>● Birth outcomes of prenatal incarceration compared to general populations</p>
-<ol start="3" style="list-style-type: upper-roman">
+<p>● Birth outcomes of prenatal incarceration compared to general populations</p></li>
 <li><p>Data</p></li>
-<li><p>Research Design</p></li>
-</ol>
+<li><p>Research Design</p>
 <p>● Hypothesis</p>
 <p>● Study Population</p>
 <p>● Relationship Between Empirical Measure and Theoretical Construct of Interest</p>
-<p>● Data analysis and interpretation</p>
+<p>● Data analysis and interpretation</p></li>
+</ol>
 <p>V. Limitations</p>
 <ol start="6" style="list-style-type: upper-roman">
 <li><p>Contribution to Knowledge</p></li>
@@ -409,7 +409,8 @@ pre code {
 <h2>Literature review</h2>
 <div id="prenatal-incarceration" class="section level3">
 <h3>Prenatal Incarceration</h3>
-<p>Two popularly researched groups are pregnant women and imprisoned individuals. That said, much less research has been done on the overlap between these two already vulnerable groups: pregnant women in prisons. Before exploring specificities about birth outcomes, it is important to first contextualize prenatal incarceration. To begin, there have been a few qualitative studies including interviews and surveys about pregnancy behind bars. Wismont (2000) conducted a study to explain the experience of being pregnant in prison. While much has changed in the past twenty years, this background knowledge gives a general context for pregnancy in US prisons. She interviewed twelve participants, asking them about their pregnancy experiences. Some of the women in the study had been pregnant before, so they could describe first hand the difference of being pregnant within and outside of the prison. They explained specific stressors such as the lack of choices about their care, the powerlessness and isolation during an already stressful experience and fears of saying goodbye to the baby. In my research study, I want to quantify these differences. While this study is thought provoking, it is merely these twelve womens’ opinions on their experiences. It raises the question of whether this experience is quantifiably different. Similarly, Dolan et al. (2019) analyzed the mental health of pregnant women in prison in the UK. Of the group studied, she found that 51% had depression and 57% had anxiety. That said, when regarding mental health in this topic it is difficult to pinpoint the causation due to regular hormonal shifts during any pregnancy and increased mental health concerns during imprisonment. That is, it is unclear how much is due to the pregnancy alone, how much is due to the imprisonment alone and how much is the overlap. Regardless, it is noteworthy that more imprisoned pregnant women in this study had diagnosable mental health concerns than not. The larger picture of prenatal pregnancy has been studied and has been shown to have detrimental effects when interviewing women. On a personal level, the lack of autonomy, the physical discomfort and the loneliness, among many other issues, have great impacts on a woman’s pregnancy experience. That said, does it have substantial impacts that would affect birth outcomes?</p>
+<p>Two popularly researched groups are pregnant women and imprisoned individuals. That said, much less research has been done on the overlap between these two already vulnerable groups: pregnant women in prisons. Before exploring specificities about birth outcomes, it is important to first contextualize prenatal incarceration.</p>
+<p>To begin, there have been a few qualitative studies including interviews and surveys about pregnancy behind bars. Wismont (2000) conducted a study to explain the experience of being pregnant in prison. While much has changed in the past twenty years, this background knowledge gives a general context for pregnancy in US prisons. She interviewed twelve participants, asking them about their pregnancy experiences. Some of the women in the study had been pregnant before, so they could describe first hand the difference of being pregnant within and outside of the prison. They explained specific stressors such as the lack of choices about their care, the powerlessness and isolation during an already stressful experience and fears of saying goodbye to the baby. In my research study, I want to quantify these differences. While this study is thought provoking, it is merely these twelve womens’ opinions on their experiences. It raises the question of whether this experience is quantifiably different. Similarly, Dolan et al. (2019) analyzed the mental health of pregnant women in prison in the UK. Of the group studied, she found that 51% had depression and 57% had anxiety. That said, when regarding mental health in this topic it is difficult to pinpoint the causation due to regular hormonal shifts during any pregnancy and increased mental health concerns during imprisonment. That is, it is unclear how much is due to the pregnancy alone, how much is due to the imprisonment alone and how much is the overlap. Regardless, it is noteworthy that more imprisoned pregnant women in this study had diagnosable mental health concerns than not. The larger picture of prenatal pregnancy has been studied and has been shown to have detrimental effects when interviewing women. On a personal level, the lack of autonomy, the physical discomfort and the loneliness, among many other issues, have great impacts on a woman’s pregnancy experience. That said, does it have substantial impacts that would affect birth outcomes?</p>
 </div>
 <div id="pregnancy-outcomes-in-prisons-in-the-us" class="section level3">
 <h3>Pregnancy outcomes in Prisons in the US</h3>
@@ -461,7 +462,9 @@ pre code {
 </div>
 <div id="contribution-to-knowledge" class="section level2">
 <h2>Contribution to Knowledge</h2>
-<p>There is growing literature on the prevalence of childbirth in prison as well as descriptive studies explaining birth outcomes. That said, there are no recent studies that explore the difference in birth outcomes for imprisoned women to women in both a general population and an underserved population within the United States. Past studies have explored aspects of this paper, but none encapsulate all in one. For example, as discussed in the literature review, similar studies have been conducted in other countries. The outcomes of this study can then be compared to outcomes of similar studies done in other countries. Ultimately, the outcomes will determine the given contributions. For example, if it is revealed that pregnancy in prison does lead to increased rates of adverse birth outcomes then this paper may be policy motivating. Further, this paper may be used to shine light on the conditions for whichever population has the least desirable birth outcomes. That is, if the group on medicaid has significantly worse outcomes than prisoners that may be telling of how damaging socioeconomic disadvantages can be in this country. In conclusion, this study can be used to fill in gaps in a rarely studied population. Pregnant women in prison are an especially vulnerable population and deserve more attention. On top of exploring the data analysis in question, it is also important to share information on this group. 16</p>
+<p>There is growing literature on the prevalence of childbirth in prison as well as descriptive studies explaining birth outcomes. That said, there are no recent studies that explore the difference in birth outcomes for imprisoned women to women in both a general population and an underserved population within the United States. Past studies have explored aspects of this paper, but none encapsulate all in one. For example, as discussed in the literature review, similar studies have been conducted in other countries. The outcomes of this study can then be compared to outcomes of similar studies done in other countries.</p>
+<p>Ultimately, the outcomes will determine the given contributions. For example, if it is revealed that pregnancy in prison does lead to increased rates of adverse birth outcomes then this paper may be policy motivating. Further, this paper may be used to shine light on the conditions for whichever population has the least desirable birth outcomes. That is, if the group on medicaid has significantly worse outcomes than prisoners that may be telling of how damaging socioeconomic disadvantages can be in this country.</p>
+<p>In conclusion, this study can be used to fill in gaps in a rarely studied population. Pregnant women in prison are an especially vulnerable population and deserve more attention. On top of exploring the data analysis in question, it is also important to share information on this group.</p>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
@@ -478,7 +481,7 @@ pre code {
 <li>Knight, M., &amp; Plugge, E. (2005). The outcomes of pregnancy among imprisoned women: a systematic review. BJOG : an international journal of obstetrics and gynaecology, 112(11), 1467–1474. <a href="https://doi.org/10.1111/j.1471-0528.2005.00749.x" class="uri">https://doi.org/10.1111/j.1471-0528.2005.00749.x</a></li>
 <li>Walker, J. R., Hilder, L., Levy, M. H., &amp; Sullivan, E. A. (2014). Pregnancy, prison and perinatal outcomes in New South Wales, Australia: A retrospective cohort study using linked health data. Retrieved from <a href="https://bmcpregnancychildbirth.biomedcentral.com/articles/10.1186/1471-2393-14-214#c" class="uri">https://bmcpregnancychildbirth.biomedcentral.com/articles/10.1186/1471-2393-14-214#c</a> iteas</li>
 <li>Cordero, L., Hines, S., Shibley, K. A., &amp; Landon, M. B. (1991). Duration of incarceration and perinatal outcome. Obstetrics and gynecology, 78(4), 641–645.</li>
-<li>S L Martin, H Kim, L L Kupper, R E Meyer, and M Hays (1997) Is incarceration during pregnancy associated with infant birthweight? American Journal of Public Health 87, 1526_1531, <a href="https://doi.org/10.2105/AJPH.87.9.1526" class="uri">https://doi.org/10.2105/AJPH.87.9.1526</a> 18</li>
+<li>S L Martin, H Kim, L L Kupper, R E Meyer, and M Hays (1997) Is incarceration during pregnancy associated with infant birthweight? American Journal of Public Health 87, 1526_1531, <a href="https://doi.org/10.2105/AJPH.87.9.1526" class="uri">https://doi.org/10.2105/AJPH.87.9.1526</a></li>
 </ol>
 </div>
 </div>
